--- a/stack_etudiants/src/styles/settings/colors.scss
+++ b/stack_etudiants/src/styles/settings/colors.scss
@@ -58,3 +58,9 @@
     --color-fail: #e11c1c;
     --color-win: #2ece32;
 }
+
+
+// Colors
+$blanc: #ffffff;
+$turquoise: #57f0f8;
+$gris-foncer: #242424;
