--- a/stack_etudiants/src/styles/settings/fonts.scss
+++ b/stack_etudiants/src/styles/settings/fonts.scss
@@ -18,4 +18,17 @@
     --font-size-h4: 1.6rem;
     --font-size-h5: 1.4rem;
     --font-size-h6: 1.2rem;
+
+    --font-primary: "ABeeZee", sans-serif;
+    --font-size-grand-titre: 59px;
+    --font-size-titre: 59px;
+    --font-size-sous-titre: 30px;
+    --font-size-prix: 46px;
+    --font-size-h3: 19px;
+    --font-size-h2: 37px;
+    --font-size-h4: 33px;
+    --font-size-h1-1: 50px;
+    --font-size-h5: 30px;
+    --font-size-out: 23px;
+    --font-size-bouton: 28px;
 }
