--- a/stack_etudiants/src/styles/components/icons.scss
+++ b/stack_etudiants/src/styles/components/icons.scss
@@ -1,43 +1,38 @@
-/* ==========================================================================
-   icons / component
-   ========================================================================== */
+// ==========================================================================
+// Iconography
+// ==========================================================================
 
-[class^='icon'] {
-    fill: currentColor; // inherit color of its context
-    display: inline-block;
-    flex: 0 0 auto; // prevent icon shrink/grow if in a flex parent
-    height: 1em;
-    vertical-align: middle;
-    width: 1em;
-    stroke: transparent;
+[class^="icon"],
+[class*=" image"] {
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: inline-block;
+  height: var(--icon-size);
+  width: var(--icon-size);
 }
 
 .icon--stroke {
-    fill: transparent;
-    stroke: currentColor;
+  fill: transparent;
+  stroke: currentColor;
 }
 
 .icon--xs {
-    height: 0.75em;
-    width: 0.75em;
+  height: var(--icon-size-xs);
+  width: var(--icon-size-xs);
 }
-
 .icon--sm {
-    height: 0.8em;
-    width: 0.8em;
+  height: var(--icon-size-sm);
+  width: var(--icon-size-sm);
 }
-
 .icon--md {
-    height: 1.25em;
-    width: 1.25em;
+  height: var(--icon-size-md);
+  width: var(--icon-size-md);
 }
-
 .icon--lg {
-    height: 1.75em;
-    width: 1.75em;
+  height: var(--icon-size-lg);
+  width: var(--icon-size-lg);
 }
-
 .icon--xl {
-    height: 7em;
-    width: 7em;
+  height: var(--icon-size-xl);
+  width: var(--icon-size-xl);
 }
