--- a/stack_etudiants/src/styles/elements/headings.scss
+++ b/stack_etudiants/src/styles/elements/headings.scss
@@ -2,39 +2,46 @@
    HEADINGS / ELEMENT
    ========================================================================== */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: var(--font-primary);
-    line-height: 1.1;
-    font-weight: bold;
-    margin: 0;
-}
-
-h1 {
-    font-size: rem(34px);
-    line-height: 1;
-}
-
-h2 {
-    font-size: var(--font-size-h2);
-}
-
-h3 {
-    font-size: var(--font-size-h3);
-}
-
-h4 {
-    font-size: var(--font-size-h4);
-}
-
-h5 {
-    font-size: var(--font-size-h5);
-}
-
-h6 {
-    font-size: var(--font-size-h6);
-}
+   h1.GrandTitre,
+   .titre,
+   h1.SousTitre,
+   .prix,
+   h3,
+   h2,
+   h4,
+   h1.H1-1,
+   h5,
+   .out {
+     font-family: var(--font-primary);
+     font-weight: normal;
+     margin: 0;
+   }
+   
+   h1.GrandTitre,
+   .titre {
+     font-size: var(--font-size-grand-titre);
+   }
+   h1.SousTitre {
+     font-size: var(--font-size-sous-titre);
+   }
+   .prix {
+     font-size: var(--font-size-prix);
+   }
+   h3 {
+     font-size: var(--font-size-h3);
+   }
+   h2 {
+     font-size: var(--font-size-h2);
+   }
+   h4 {
+     font-size: var(--font-size-h4);
+   }
+   h1.H1-1 {
+     font-size: var(--font-size-h1-1);
+   }
+   h5 {
+     font-size: var(--font-size-h5);
+   }
+   .out {
+     font-size: var(--font-size-out);
+   }
