--- a/stack_etudiants/src/styles/main.scss
+++ b/stack_etudiants/src/styles/main.scss
@@ -1,603 +1,33 @@
 /* ==========================================================================
-   FONTS / SETTINGS
-   ========================================================================== */
-   :root {
-    --font-primary: 'ABeeZee', sans-serif;
-    --font-size-grand-titre: 59px;
-    --font-size-titre: 59px;
-    --font-size-sous-titre: 30px;
-    --font-size-prix: 46px;
-    --font-size-h3: 19px;
-    --font-size-h2: 37px;
-    --font-size-h4: 33px;
-    --font-size-h1-1: 50px;
-    --font-size-h5: 30px;
-    --font-size-out: 23px;
-    --font-size-bouton: 28px;
-}
-
-/* ==========================================================================
-   HEADINGS / ELEMENT
-   ========================================================================== */
-
-   h1.GrandTitre,
-   .titre,
-   h1.SousTitre,
-   .prix,
-   h3,
-   h2,
-   h4,
-   h1.H1-1,
-   h5,
-   .out {
-       font-family: var(--font-primary);
-       font-weight: normal;
-       margin: 0;
-   }
-   
-   h1.GrandTitre,
-   .titre {
-       font-size: var(--font-size-grand-titre);
-   }
-   
-   h2.SousTitre {
-       font-size: var(--font-size-sous-titre);
-   }
-   
-   .prix {
-       font-size: var(--font-size-prix);
-   }
-   
-   h3 {
-       font-size: var(--font-size-h3);
-   }
-   
-   h2 {
-       font-size: var(--font-size-h2);
-   }
-   
-   h4 {
-       font-size: var(--font-size-h4);
-   }
-   
-   h1.H1-1 {
-       font-size: var(--font-size-h1-1);
-   }
-   
-   h5 {
-       font-size: var(--font-size-h5);
-   }
-   
-   .out {
-       font-size: var(--font-size-out);
-   }
-
-/* ==========================================================================
-   DIMENSIONS / SETTINGS
-   ========================================================================== */
-
-// Valeurs utilisées pour les médias query
-$breakpoint-xs: 375px;
-$breakpoint-sm: 768px;
-$breakpoint-md: 1024px;
-$breakpoint-lg: 1440px;
-$breakpoint-xl: 1920px;
-$breakpoint-mdplus: 1024px;
-$breakpoint-lger: 1200px;
-
-:root {
-    --spacing-xs: 5px;
-    --spacing-sm: 15px;
-    --spacing-md: 30px;
-    --spacing-lg: 50px;
-    --spacing-xl: 100px;
-}
-
-//Pour les differents couleurs de la page colors.scss
-
-$blanc: #ffffff;
-$turquoise: #57F0F8;
-$gris-foncer: #242424;
-
-/* ==========================================================================
-   ICONS / COMPONENT
-   ========================================================================== */
-
-   :root {
-    --icon-size: 58px;
-    --icon-size-xs: 0.75em;
-    --icon-size-sm: 0.8em;
-    --icon-size-md: 1.25em;
-    --icon-size-lg: 1.75em;
-    --icon-size-xl: 7em;
-}
-
-[class^='icon'],
-[class*=' image'] {
-    background-repeat: no-repeat;
-    background-size: contain;
-    display: inline-block;
-    height: var(--icon-size);
-    width: var(--icon-size);
-}
-
-.icon--stroke {
-    fill: transparent;
-    stroke: currentColor;
-}
-
-.icon--xs {
-    height: var(--icon-size-xs);
-    width: var(--icon-size-xs);
-}
-
-.icon--sm {
-    height: var(--icon-size-sm);
-    width: var(--icon-size-sm);
-}
-
-.icon--md {
-    height: var(--icon-size-md);
-    width: var(--icon-size-md);
-}
-
-.icon--lg {
-    height: var(--icon-size-lg);
-    width: var(--icon-size-lg);
-}
-
-.icon--xl {
-    height: var(--icon-size-xl);
-    width: var(--icon-size-xl);
-}
-
-/* ==========================================================================
-   SPECIFIC ICONS
-   ========================================================================== */
-
-
-
-/* ==========================================================================
-   IMAGES
-   ========================================================================== */
-
-$image-path: "src/assets/images";
-
-.image_2 {
-    background-image: url(#{$image-path}/image\ 2.png);
-    width: auto;  // Remplacez 'auto' par la largeur souhaitée
-    height: auto;  // Remplacez 'auto' par la hauteur souhaitée
-}
-
-.mask_group {
-    background-image: url(#{$image-path}/Mask\ group.png);
-    width: auto;  // Remplacez 'auto' par la largeur souhaitée
-    height: auto;  // Remplacez 'auto' par la hauteur souhaitée
-}
-
-/* ==========================================================================
    MAIN.SCSS
    ========================================================================== */
 
 // Importing settings
-@import 'settings/colors';
-@import 'settings/dimensions';
-@import 'settings/easing';
-@import 'settings/fonts';
+@import "settings/colors";
+@import "settings/dimensions";
+@import "settings/easing";
+@import "settings/fonts";
 
 // Importing tools
-@import 'tools/cover';
+@import "tools/cover";
 
 // Importing generic styles
-@import 'generic/normalize';
-@import 'generic/reset';
+@import "generic/normalize";
+@import "generic/reset";
 
 // Importing element styles
-@import 'elements/body';
-@import 'elements/headings';
-@import 'elements/links';
-@import 'elements/wrapper';
+@import "elements/body";
+@import "elements/headings";
+@import "elements/links";
+@import "elements/wrapper";
 
 // Importing component styles
-@import 'components/icons';
+@import "components/icons";
+@import "components/header";
+@import "components/sector1";
+@import "components/sector2";
+@import "components/sector3";
+@import "components/footer";
 
 // Importing utility styles
-@import 'utilities/accessibility';
-
-/* ==========================================================================
-   COMPONENTS/HEADER.SCSS
-   ========================================================================== */
-
-   .header {
-    background-color: $gris-foncer;
-    padding: 0;
-    height: 224px;
-    display: flex;
-    align-items: center;
-  
-    .wrapper {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      
-      nav {
-        ul {
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          display: flex;
-          align-items: center;
-  
-          li {
-            margin: 0 20px;
-  
-            a.button {
-              padding: 10px 20px;
-              border: none;
-              color: $blanc;
-              text-decoration: none;
-              font-size: var(--font-size-bouton);
-  
-              &:hover {
-                text-decoration: underline;
-              }
-            }
-  
-            a:not(.button) {
-              text-decoration: none;
-  
-              &:hover {
-                text-decoration: underline;
-              }
-            }
-          }
-        }
-      }
-    }
-  
-    .header__brand {
-      .img_main {
-        height: auto;
-        width: 100px;
-        border-left: 2px solid $blanc;
-        border-right: 2px solid $blanc;
-      }
-    }
-  }
-/* ==========================================================================
-   COMPONENTS/SECTOR1.SCSS
-   ========================================================================== */
-
-   .section_1 {
-    border: 40px solid white;
-    background-color: $gris-foncer;
-    padding: 20px;
-
-    .wrapper {
-        margin-left: 200px;
-
-        .title_wrapper {
-            text-align: center;
-            margin-bottom: 20px;  /* Adjusted spacing */
-
-            h1 {
-                font-size: 59px;
-                margin-bottom: 10px;  /* Adjusted spacing */
-                color: white;
-            }
-
-            h2 {
-                font-size: 30px;
-                color: white;
-            }
-        }
-
-        .section_content {
-            margin-top: 50px;
-            margin-bottom: 50px;
-            margin-right: 300px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .left_column {
-                .icon_logo_principale {
-                    width: 700px;
-                    height: 500px;
-                    margin-bottom: 20px;  /* Adjusted spacing */
-                }
-            }
-
-            .right_column {
-                flex: 1;
-                padding-left: 30px;
-
-                .top_line {
-                    width: 100%;
-                    height: 5px;
-                    background-color: white;
-                    margin-bottom: 20px;  /* Adjusted spacing */
-                }
-
-                .columns {
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: flex-start;
-                    margin-bottom: 20px;  /* Adjusted spacing */
-
-                    .column_left, .column_right {
-                        flex: 1;
-                        padding: 0 10px;
-                        margin-right: 20px;
-                    }
-
-                    .column_right {
-                        margin-right: 0;
-                    }
-
-                    h3, h4 {
-                        margin: 0;
-                        margin-bottom: 10px;  /* Adjusted spacing */
-                        color: white;
-                    }
-
-                    .prix, .contributors {
-                        color: $turquoise;
-                    }
-                }
-
-                .section_media {
-                    display: flex;
-                    align-items: center;
-                    margin-bottom: 20px;  /* Adjusted spacing */
-
-                    button {
-                        background-color: transparent;
-                        color: $turquoise;
-                        font-size: var(--font-size-bouton);
-                        padding: var(--spacing-sm);
-                        border: 2px solid $turquoise;
-                        margin-top: 20px;
-                        margin-right: 20px;  /* Adjusted spacing */
-                    }
-
-                    img {
-                        width: 50px;
-                        height: 50px;
-                        margin-right: 10px;
-                        object-fit: cover;
-                    }
-                }
-
-                .content_below_columns {
-                    text-align: center;
-
-                    .custom-h3 {
-                        color: white;
-                        font-size: 19px;
-                    }
-                }
-            }
-        }
-    }
-}
-
-
-/* ==========================================================================
-   COMPONENTS/SECTOR2.SCSS
-   ========================================================================== */
-
-   .section_2 {
-    border: 40px solid white;
-    background-color: $gris-foncer;
-    position: relative;
-    overflow: hidden;
-  
-    .image_background_wrapper {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 60px solid $gris-foncer;
-    }
-  
-    .image_background {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  
-    .mini_header {
-      position: relative;
-      z-index: 2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: black;
-      font-size: 3.5em;
-      padding: var(--spacing-sm);
-      background-color: white;
-      border: 8px solid $gris-foncer;
-      gap: 1em;
-    }
-  
-    .wrapper {
-      position: relative;
-      z-index: 2;
-    }
-  
-    .cards {
-      display: flex;
-      justify-content: space-between;
-      padding: 20px;
-    }
-  
-    .card {
-      height: 600px;
-      width: 600px;
-      background-color: $gris-foncer;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; // Center vertically
-      align-items: center;     // Center horizontally
-    }
-    
-    .big_black_box {
-      position: relative;  
-      color: white;
-      text-align: center;
-      width: 500px;  // 1/3 larger than 400px
-    
-      h3 {
-        font-size: 3em;
-        margin-bottom:30px;
-      }
-    
-      ul {
-        list-style: none;
-        padding: 0;
-        text-align: left;
-    
-        li {
-          display: flex;
-          align-items: center;
-          font-size: 1.5em;
-          margin: 10px 0;
-          font-size: 2em;
-    
-          .bullet {
-            margin-right: 10px;
-            width: 50px;
-            height: 50px;
-          }
-        }
-      }
-    }
-  }
-  
-  
-  
-
-/* ==========================================================================
-   COMPONENTS/SECTOR3.SCSS
-   ========================================================================== */
-
-   .section_3 {
-    height: 130vh;
-    border: 40px solid white;
-    background-color: $gris-foncer;
-    padding: 20px;
-  
-    .wrapper {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-  
-        .cards {
-            display: flex;
-            justify-content: space-around;
-            width: 100%;
-            padding: 0 20px;
-            margin-left: 600px;
-            
-  
-            .card {
-                transform: scale(1.5);
-                flex: 1;
-                max-width: calc((100% / 3) - 40px);
-                background-color: $blanc;
-                margin: 100px;
-                padding: var(--spacing-md);
-                box-sizing: border-box;
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-start;
-                align-items: center;
-
-                .card_header {
-                    width: 100%;
-                    margin-bottom: 100px;
-                    font-size: 3em;
-                    text-align: center;
-                }
-  
-                ul {
-                    background-color: $gris-foncer;
-                    width: 100%;
-                    padding: 20px;
-                    color: $blanc;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    justify-content: center;
-                    transform: scale(1);
-  
-                    li {
-                        list-style-type: none;
-                        font-size: 1.8em;
-                        margin-bottom: 20px;
-                        text-align: left;
-                    }
-                }
-            }
-        }
-    }
-}
-
-  
-/* ==========================================================================
-   COMPONENTS/FOOTER.SCSS
-   ========================================================================== */
-
-   footer {
-    background-color: $gris-foncer;
-    height: 367px;
-    position: relative;
-  
-    .footer_wrapper {
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-  
-      .footer_section {
-        flex: 1;
-        color: $blanc;
-        margin-left: 100px;
-        margin-top: 50px;
-  
-        h4 {
-          font-size: var(--font-size-sous-titre);
-          margin-bottom: 10px;
-        }
-  
-        ul {
-          list-style: none;
-          padding-left: 0;
-  
-          li {
-            margin-bottom: 5px;
-            font-size: var(--font-size-out);
-          }
-        }
-      }
-    }
-  
-    .footer_copyright {
-      color: $blanc;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      padding: 10px;
-      font-size: var(--font-size-out);
-    }
-  }
+@import "utilities/accessibility";
